<resources>
    <string name="app_name">Agora</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="register">REGISTER</string>
    <string name="welcome_msg">"Hello, %1$s!"</string>
    <string name="price_tag">"$ %.2f"</string>
    <string name="keep_me_logged_in">Keep me Logged in</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="my_items">My Items</string>
    <string name="auctions">Auctions</string>
    <string name="create_new">Create New</string>
    <string name="delete_account">Delete Account</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="seller">Seller :</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="price">Price:</string>
    <string name="title">Title:</string>
    <string name="Description">Description:</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? <b>Sign Up here.</b></string>
    <string name="buy_it_now">Buy it now</string>
    <string name="contact_seller">Contact seller</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="from_storage">From Storage</string>
    <string name="from_camera">From Camera</string>
    <string name="create">CREATE</string>
    <string name="picture_index">"%1$d out of %2$d"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="msg_token_fmt">FCM Token is : %1$s</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="upload_success">Upload Successful</string>
    <string name="upload_failure">Upload failed</string>
    <string name="progress_uploading">Loading</string>
    <string name="last_message">Last message</string>
    <string name="wed">Wed</string>
    <string name="category">Category</string>


</resources>