<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.core.ItemDetailsFragment" >

    <Button
        android:id="@+id/contactSellerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/contact_seller"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buyBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buyBtn" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/imageRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/imageRecyclerView" />

    <TextView
        android:id="@+id/detailDescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Description"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/titleTV"
        app:layout_constraintTop_toBottomOf="@+id/titleTV" />

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/middle_blue"
        android:text="@string/buy_it_now"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/contactSellerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detailDescriptionTV"
        app:layout_constraintTop_toBottomOf="@+id/detailDescriptionTV" />

    <TextView
        android:id="@+id/sellerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/seller"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buyBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sellerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/seller"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/sellerText"
        app:layout_constraintStart_toEndOf="@+id/sellerText"
        app:layout_constraintTop_toTopOf="@+id/sellerText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageRecyclerView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/picIndexTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/hint_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageRecyclerView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>